--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "type": "project",
   "require": {
     "php": ">=7.0.0",
+    "emadadly/laravel-uuid": "^1.2",
     "fideloper/proxy": "~3.3",
     "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "5.5.*",
@@ -16,6 +17,7 @@
     "pusher/pusher-php-server": "^3.0"
   },
   "require-dev": {
+    "barryvdh/laravel-ide-helper": "^2.4",
     "filp/whoops": "~2.0",
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "~1.0",
