--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^5.0.5",
     "core-js": "^2.5.1",
     "laravel-echo": "^1.3.2",
+    "moment": "^2.19.3",
     "pusher-js": "^4.2.1",
     "rxjs": "^5.5.3",
     "zone.js": "^0.8.18"
