--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^5.0.5",
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/router": "^5.0.5",
+    "animate-scss": "^3.2.1",
     "core-js": "^2.5.1",
+    "howler": "^2.0.7",
     "laravel-echo": "^1.3.2",
     "moment": "^2.19.3",
     "pusher-js": "^4.2.1",
