--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "animate-scss": "^3.2.1",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.1",
     "howler": "^2.0.7",
     "laravel-echo": "git://github.com/squigg/echo.git#master",
