--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.19.3",
     "pusher-js": "^4.2.1",
     "rxjs": "^5.5.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
